--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "zendframework/zend-mvc": "~2.2 || ^3.1",
         "zendframework/zend-servicemanager": "~2.2 || ^3.3",
         "zendframework/zend-stdlib": "~2.2 || ^3.0.1",
-        "slm/queue": "0.4.* || 1.0.*",
+        "slm/queue": "0.4.* || ^1.0",
         "pda/pheanstalk": "~3.0"
     },
     "require-dev": {
