--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "slm/queue-beanstalkd",
-    "description": "Zend Framework 2 module that integrates with Beanstalkd queuing system",
+    "description": "Laminas module that integrates with Beanstalkd queuing system",
     "license": "BSD-3-Clause",
     "type": "library",
     "keywords": [
@@ -26,14 +26,13 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "zendframework/zend-mvc": "~2.2 || ^3.1",
-        "zendframework/zend-servicemanager": "~2.2 || ^3.3",
-        "zendframework/zend-stdlib": "~2.2 || ^3.0.1",
-        "slm/queue": "0.4.* || ^1.0",
+        "laminas/laminas-mvc": "~2.2 || ^3.1",
+        "laminas/laminas-servicemanager": "~2.2 || ^3.3",
+        "laminas/laminas-stdlib": "~2.2 || ^3.0.1",
+        "slm/queue": "^2.0",
         "pda/pheanstalk": "~3.0"
     },
     "require-dev": {
-        "zendframework/zendframework": "~2.2 || ^3.0",
         "squizlabs/php_codesniffer": "1.5.*",
         "phpunit/phpunit": "~4.1"
     },
