--- a/composer.json
+++ b/composer.json
@@ -25,16 +25,16 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": "^8.2",
         "laminas/laminas-mvc": "~2.2 || ^3.1",
         "laminas/laminas-servicemanager": "~2.2 || ^3.3",
         "laminas/laminas-stdlib": "~2.2 || ^3.0.1",
-        "slm/queue": "^2.0",
-        "pda/pheanstalk": "~3.0"
+        "slm/queue": "^3.0",
+        "pda/pheanstalk": "~4.0.4"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "1.5.*",
-        "phpunit/phpunit": "~4.1"
+        "squizlabs/php_codesniffer": "^3.7",
+        "phpunit/phpunit": "^9.5"
     },
     "extra": {
         "branch-alias": {
