--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 		}
 	],
 	"require": {
-		"php": "^8.4",
+		"php": "^8.3 | ^8.4",
 		"laminas/laminas-mvc": "^3.8.0",
 		"laminas/laminas-servicemanager": "^3.23.1",
 		"laminas/laminas-stdlib": "^3.14.0",
