--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
 		"laminas/laminas-servicemanager": "^3.23.1",
 		"laminas/laminas-stdlib": "^3.14.0",
 		"slm/queue": "dev-master",
-		"pda/pheanstalk": "~4.0.4"
+		"pda/pheanstalk": "^v7.1.1"
 	},
 	"require-dev": {
 		"srggroup/srg_standards": "v2.0.0",
